--- a/L3/lab3.html
+++ b/L3/lab3.html
@@ -650,7 +650,7 @@ Web-страницах для создания гипертекстовых сс
 </ul>
 </ol>
 
-<p style="font-style: italic; text-align: center;">Необходимые ресурсы можно найти в папке <code>labs_web_design/sources/!for_students</code>.</p>
+<br><p style="font-style: italic; text-align: center;">Необходимые ресурсы можно найти&nbsp;-> <a href="https://drive.google.com/drive/folders/1xVG4yx2RHVviHKcdRNXZVx9gyrSt_Hvy" target="_blank" class="txthref"> Google&nbsp;диск</a>.</p>
 
 <br><h2 style="text-align: center;">Отчет по лабораторной работе должен содержать:</h2><br>
 
