--- a/L2/lab2.html
+++ b/L2/lab2.html
@@ -740,7 +740,8 @@ MIME-тип: <code>video/x-matroska, audio/x-matroska</code>. </p>
 </ul>
 </ol>
 
-<p style="font-style: italic; text-align: center;">Необходимые ресурсы можно найти&nbsp;-> <a href="https://drive.google.com/drive/folders/1xVG4yx2RHVviHKcdRNXZVx9gyrSt_Hvy" target="_blank" class="txthref"> Google&nbsp;диск</a>.</p>
+<br><p style="font-style: italic; text-align: center;">Необходимые ресурсы можно найти&nbsp;-> <a href="https://drive.google.com/drive/folders/1xVG4yx2RHVviHKcdRNXZVx9gyrSt_Hvy" target="_blank" class="txthref"> Google&nbsp;диск</a>.</p>
+
 <br><h2 style="text-align: center;">Отчет по лабораторной работе должен содержать:</h2><br>
 
 <P>В электронном варианте представить все HTML-документы созданные в работе. Проилюстрировать преподавателю функционирование этих HTML-документов по всем пунктам задания лабораторной работы, рассказать какие теги были использованы и для чего.</P>
