--- a/L4/lab4.html
+++ b/L4/lab4.html
@@ -608,7 +608,7 @@ background: #ffffff url("img_tree.png") no-repeat right top;
 
 <p>Ваша задача сделать стильно оформленную веб - страницу с цитатами и изображениями. </p><br>
 
-<p style="font-style: italic; text-align: center;">Необходимые ресурсы можно найти в папке <code>labs_web_design/sources/!for_students/CoolStyles</code>.</p>
+<p style="font-style: italic; text-align: center;">Необходимые ресурсы можно найти&nbsp;-> <a href="https://drive.google.com/drive/folders/1xVG4yx2RHVviHKcdRNXZVx9gyrSt_Hvy" target="_blank" class="txthref"> Google&nbsp;диск</a>.</p>
 
 <br><h2 style="text-align: center;">Отчет по лабораторной работе должен содержать:</h2><br>
 
