--- a/L5/lab5.html
+++ b/L5/lab5.html
@@ -797,7 +797,7 @@ middle bottom</code></td>
   <li>Ниже добавьте еще 1 фрейм, скопируйте в него код из 1-ой лабораторной работы используя специальный атрибут фрейма.</li>
 </ol>
 
-<p style="font-style: italic; text-align: center;">Необходимые ресурсы можно найти в папке <code>labs_web_design/sources/!for_students</code>.</p>
+<br><p style="font-style: italic; text-align: center;">Необходимые ресурсы можно найти&nbsp;-> <a href="https://drive.google.com/drive/folders/1xVG4yx2RHVviHKcdRNXZVx9gyrSt_Hvy" target="_blank" class="txthref"> Google&nbsp;диск</a>.</p>
 
 <br><h2 style="text-align: center;">Отчет по лабораторной работе должен содержать:</h2><br>
 
