--- a/L7/lab7.html
+++ b/L7/lab7.html
@@ -1247,6 +1247,8 @@ text-shadow: initial;</pre>
   </ul>
 </ol>
 
+<br><p style="font-style: italic; text-align: center;">Необходимые ресурсы можно найти&nbsp;-> <a href="https://drive.google.com/drive/folders/1xVG4yx2RHVviHKcdRNXZVx9gyrSt_Hvy" target="_blank" class="txthref"> Google&nbsp;диск</a>.</p>  
+  
 <br><h2 style="text-align: center;">Отчет по лабораторной работе должен содержать:</h2><br>
 
 <P>В электронном варианте представить все HTML-документы созданные в работе. Проилюстрировать преподавателю функционирование этих HTML-документов по всем пунктам задания лабораторной работы.</P>
