--- a/L1/lab1.html
+++ b/L1/lab1.html
@@ -157,7 +157,7 @@
 
 
 
-<br><div style="position: relative;"><h2 style="text-align: center;" id=M1>1. Основные понятия</h2></div><br>
+<br><div style="position: relative;"><h2 style="text-align: center;" id=M1>1. Основные понятия</h2></div><br><br> 
 
 <p>&nbsp;HTML код указывает браузеру, как рендерить контент. Разметка представляет собой базовую структуру страниц. 
 Стандарты HTML и CSS регулируются консорциумом всемирной сети.</p> 
