--- a/L2/lab2.html
+++ b/L2/lab2.html
@@ -156,7 +156,7 @@
 
 
 
-<br><div style="position: relative;"><h2 style="text-align: center;" id=M1>1. Основные положения</h2></div><br>
+<br><div style="position: relative;"><h2 style="text-align: center;" id=M1>1. Основные положения</h2></div><br><br> 
 
 
 <p style="margin: 0">Файл с документом, закодированным на языке HTML, - это текстовый
