--- a/L3/lab3.html
+++ b/L3/lab3.html
@@ -157,7 +157,7 @@
 
 
 
-<br><div style="position: relative;"><h2 style="text-align: center;" id=M1>1. Основные положения</h2></div><br>
+<br><div style="position: relative;"><h2 style="text-align: center;" id=M1>1. Основные положения</h2></div><br><br>
 
 <p>Ссылки являются основой гипертекстовых документов и позволяют переходить с
   одной веб-страницы на другую. Особенность их состоит в том, что сама ссылка
