--- a/L4/lab4.html
+++ b/L4/lab4.html
@@ -160,7 +160,7 @@
 
 
 
-<br><div style="position: relative;"><h2 style="text-align: center;" id=M1>1. Типы листов стилей</h2></div><br>
+<br><div style="position: relative;"><h2 style="text-align: center;" id=M1>1. Типы листов стилей</h2></div><br><br>
 
 <p><strong>CSS (Cascading Style Sheets)</strong> — язык таблиц стилей, который позволяет прикреплять стиль 
 (например, шрифты и цвет) к структурированным документам (например, документам HTML и приложениям XML). 
