--- a/L6/lab6.html
+++ b/L6/lab6.html
@@ -158,7 +158,7 @@
 
 
 
-<br><div style="position: relative;"><h2 style="text-align: center;" id=M1>1. Основные положения</h2></div><br>
+<br><div style="position: relative;"><h2 style="text-align: center;" id=M1>1. Основные положения</h2></div><br><br>
 
 <p><strong>HTML-формы</strong> являются элементами управления, которые применяются для сбора 
 информации от посетителей веб-сайта. </p>
