--- a/L7/lab7.html
+++ b/L7/lab7.html
@@ -194,7 +194,7 @@
 
 
 
-<br><div style="position: relative;"><h2 style="text-align: center;" id=M1>1. Понятие блоков в CSS</h2></div><br>
+<br><div style="position: relative;"><h2 style="text-align: center;" id=M1>1. Понятие блоков в CSS</h2></div><br><br>
 
 <p>В CSS используется модель представления визуально отображаемых элементов документа в виде прямоугольных блоков, возможно, вложенных друг в друга.</p>
 
