--- a/Additional/css.html
+++ b/Additional/css.html
@@ -132,7 +132,7 @@ border: 2px solid #555555;
 repeat-y;background-attachment: fixed;margin-top:-5%; ">
 <img src="../sources/images/top1.png" style="position: relative; width:100%;">
 <div style="width:90%;margin: auto;margin-top:-10%; font-size: 140%; a:link{color:#ffffff;} " > <!--CONTENT-->
-<br><div style="position: relative;"><h2 style="text-align: center;" id="M1">CSS свойства</h2></div><br>
+<br><div style="position: relative;"><h2 style="text-align: center;" id="M1">CSS свойства</h2></div><br><br>
 <article class="node node-main-reference-page" role="article">
 <p>CSS позволяет тегам HTML назначать любые визуальные стили, формируя таким образом уникальный внешний вид сайта. Делается это при помощи свойств 
 CSS. В данном справочнике приводится информация по всем свойствам CSS с описанием, допустимыми значениями и примерами.</p>
