--- a/Additional/html_tags.html
+++ b/Additional/html_tags.html
@@ -139,7 +139,7 @@
 
       <div style="width:90%;margin: auto;margin-top:-10%; font-size: 140%; a:link{color:#ffffff;} " > <!--CONTENT-->
 
-        <br><div style="position: relative;"><h2 style="text-align: center;" id=M1>Теги HTML</h2></div><br>
+        <br><div style="position: relative;"><h2 style="text-align: center;" id=M1>Теги HTML</h2></div><br><br>
         
         <p>В таблице приведен полный список элементов, поддерживаемых HTML4 и HTML5. 
           Экспериментальные и устаревшие теги исключены. Элементы, добавленные 
