--- a/Additional/semantic.html
+++ b/Additional/semantic.html
@@ -133,7 +133,7 @@ text-indent: 1.5em;
 
 <div style="width:90%;margin: auto;margin-top:-10%; font-size: 140%; a:link{color:#ffffff;} " > <!--CONTENT-->
 
-<br><div style="position: relative;"><h2 style="text-align: center;" id=M1>Семантические элементы</h2></div><br>
+<br><div style="position: relative;"><h2 style="text-align: center;" id=M1>Семантические элементы</h2></div><br><br>
 
 <p><strong>Семантические элементы HTML5</strong> доступно описывают свой смысл или 
 назначение как для браузеров, так и для веб-разработчиков.<br>
